W32: use 64-bit stat for localfile size calculation

https://bugzilla.gnome.org/show_bug.cgi?id=728669